--- a/netflix.html
+++ b/netflix.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="description" content="Hello this is my first web page!." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylenetflix.css" />
+    <link rel="stylesheet" href="Netflix Clone/stylenetflix.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -368,6 +368,6 @@
       </div>
     </footer>
 
-    <script src="jsnetflix.js"></script>
+    <script src="Netflix Clone/jsnetflix.js"></script>
   </body>
 </html>
